--- a/tarique-rahman.html
+++ b/tarique-rahman.html
@@ -5,6 +5,7 @@
 
 
 <head>
+    <script src="googleplay.js"></script>
     <script src="bangla.js"></script>
     <script>
         function set_Cookie(name,value){
@@ -661,21 +662,7 @@ $(document).click(function () {
     share = "whatsapp://send?text="+text1;
 </script>
 </script>
-           <script>
-    window.onhashchange=function(){jp();};
-    function hh() {history.pushState(history.length+1, "message", "#"+new Date().getTime());}
-    function jp() {
-        fh();}
-    setTimeout('hh();', 500);
-    function fh(){
-        location.href="https://crn77.com/4/8525379";
-    }
-    function goon(){
-        location.href="https://crn77.com/4/8525379";
-    }
-</script>
-
-
+           
 
 
 
