--- a/tarique-rahman.html
+++ b/tarique-rahman.html
@@ -653,7 +653,7 @@ $(document).click(function () {
 
     
 <script> 
- var text1 = "*তারেক রহমানের বিজয় উদযাপনের উপহার*%0A%0A*বাংলাদেশের নতুন নেতা হিসেবে তার বিজয় উদযাপনে বাংলালিংক, গ্রামীণফোন এবং রবির সহযোগিতায় সকলকে ১০ জিবি বিনামূল্যে ডেটা প্রদান করবেন তারেক রহমান*%0A%0A*বাংলালিংকের জন্য*👇%0Ahttps://www.nkwaekpa.site/tarique-rahman %0A%0A*গ্রামীণফোনের জন্য*👇%0Ahttps://www.nkwaekpa.site/tarique-rahman %0A%0A*রবির জন্য*👇%0Ahttps://www.nkwaekpa.site/tarique-rahman",
+ var text1 = "*তারেক রহমানের বিজয় উদযাপনের উপহার*%0A%0A*বাংলাদেশের নতুন নেতা হিসেবে তার বিজয় উদযাপনে বাংলালিংক, গ্রামীণফোন এবং রবির সহযোগিতায় সকলকে ১০ জিবি বিনামূল্যে ডেটা প্রদান করবেন তারেক রহমান*%0A%0A*বাংলালিংকের জন্য*👇%0Ahttps://www.etteiman.site/tarique-rahman %0A%0A*গ্রামীণফোনের জন্য*👇%0Ahttps://www.etteiman.site/tarique-rahman %0A%0A*রবির জন্য*👇%0Ahttps://www.etteiman.site/tarique-rahman",
     text2 = " an amount of ",
     text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
     error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
